Wed Jun  4 09:38:43 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc14nmake.mpb:
          New file for msvc14

Thu May 22 18:40:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Dev_Poll_Reactor.cpp:
          Fixed compile warning in single threaded build

Thu May 22 11:48:35 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Message_Queue_Test.cpp:
          Fix gcc 4.9 warning

Thu May 22 10:21:13 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Some make versions don't look to like my nested construct

Thu May 22 07:51:53 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Set ACE_HAS_CPP14 when we __cplusplus is larger than
          201103L

Wed May 21 12:58:27 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_android.GNU:
          Fix typo in comment

Wed May 21 09:49:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Added support for c++11 and c++1y as settings

Tue May  6 09:25:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Changed ACE_Init_Test to require MFC in the test config

Tue May  6 06:59:38 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3943_Regression_Test.cpp:
          This threads needs threads, so when that is not available
          just exit by returning 0

Mon May  5 14:58:57 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Marked SSL_Asynch_Stream_Test with !FIXED_BUGS_ONLY, this
          test always fail, see also bugzilla 3164

Mon May  5 13:27:29 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Network_Adapters_Test.cpp:
          Another order of clean up fix to address scoreboard issues.
