@@ -40,7 +40,13 @@
 #endif /* _WIN32_WCE */
 
 //FUZZ: disable check_for_msc_ver
-#if (_MSC_VER >= 1600)
+#if (_MSC_VER >= 1900)
+# include "ace/config-win32-msvc-14.h"
+#elif (_MSC_VER >= 1800)
+# include "ace/config-win32-msvc-12.h"
+#elif (_MSC_VER >= 1700)
+# include "ace/config-win32-msvc-11.h"
+#elif (_MSC_VER >= 1600)
 # include "ace/config-win32-msvc-10.h"
 #elif (_MSC_VER >= 1500)
 # include "ace/config-win32-msvc-9.h"
